修改了static页面

--- a/src/main/webapp/WEB-INF/static/html/Xbom.html
+++ b/src/main/webapp/WEB-INF/static/html/Xbom.html
@@ -13,212 +13,163 @@
 <body>
 
     <div id="content">
-        <ul>
-            <li>
-                <span class="noL">产品编号</span>
-                <span class="pnL">产品名称</span>
-                <span class="qltyL">产品类别</span>
-                <span class="pnL">计划用量(套/月)</span>
-                <span class="dtimeL">回复方式</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">30000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">修改</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">修改</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model001</span>
-                <span class="pnL">手机主板</span>
-                <span class="qltyL">通信产品</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">人工确认</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-            <li>
-                <span class="noL">Model002</span>
-                <span class="pnL">车载中控</span>
-                <span class="qltyL">工业控制</span>
-                <span class="pnL">3000</span>
-                <span class="dtimeL">智能匹配</span>
-                <span class="dtimeL">更新时间</span>
-                <button class="button">下载</button>
-                <button class="button">删除</button>
-                <input type="file"/>
-                <button class="button">上传</button>
-            </li>
-        </ul>
+        <table cellspacing="10px">
+            <tr><th colspan="10">BOM清单管理</th></tr>
+            <tr>
+                <th>产品编号</th>
+                <th>产品名称</th>
+                <th>产品类别</th>
+                <th>每月用量</th>
+                <th>回复方式</th>
+                <th>更新时间</th>
+                <th colspan="4">操作</th>
+
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+            <tr>
+                <td>Model001</td>
+                <td>手机主板</td>
+                <td>通信产品</td>
+                <td>30000</td>
+                <td>人工确认</td>
+                <td>2018-12-16</td>
+                <td><input type="button" value="下载"/></td>
+                <td><input type="button" value="删除"/></td>
+                <td><input type="file"/></td>
+                <td><input type="button" value="上传"/></td>
+            </tr>
+        </table>
     </div>
 
 </body>
