--- a/src/main/webapp/WEB-INF/static/html/Xmfg.html
+++ b/src/main/webapp/WEB-INF/static/html/Xmfg.html
@@ -13,46 +13,51 @@
 <body>
     <div>
         <form action="toUpdateMfg">
-            <table>
-                <tr><th>品牌管理</th></tr>
+            <table cellspacing="10px">
+                <tr><th colspan="2">品牌管理</th></tr>
                 <tr>
-                    <td><input type="text" placeholder="输入品牌"/>查询</td>
+                    <td colspan="2"><input type="text" placeholder="输入品牌"/>查询</td>
                 </tr>
                 <tr>
-                    <td>品牌编号：<input type="text" value="1002"/></td>
+                    <td>品牌编号：</td>
+                    <td><input class="blank" type="text" value="1002"/></td>
                 </tr>
                 <tr>
-                    <td>英文名称：<input type="text" value="ST"/></td>
+                    <td>英文名称：</td>
+                    <td><input class="blank" type="text" value="ST"/></td>
                 </tr>
                 <tr>
-                    <td>中文名称：<input type="text" value="意法半导体"/></td>
+                    <td>中文名称：</td>
+                    <td><input class="blank" type="text" value="意法半导体"/></td>
                 </tr>
                 <tr>
-                    <td>品牌商标：<input type="file" value=""/></td>
+                    <td>品牌商标：</td>
+                    <td><input class="blank" type="file" value=""/></td>
                 </tr>
                 <tr>
-                    <td>生产产品：<textarea name="product"  cols="30" rows="10">
-                        微控制器、单片机、车规MOS管、驱动IC芯片
-                    </textarea></td>
+                    <td>生产产品：</td>
+                    <td>
+                        <textarea name="product"  cols="100" rows="10">微控制器、单片机、车规MOS管、驱动IC芯片
+                        </textarea>
+                    </td>
                 </tr>
                 <tr>
-                    <td>公司简介：<textarea name="profile" cols="30" rows="10">
-                        意法半导体（STMicroelectronics）是一家全球性的独立半导体公司，
-                        是微电子应用领域内开发及提供半导体解决方案的领导者。
-                        STMicroelectronics凭借硅片及系统技术的完美结合、雄厚的制造实力、
-                        全面的知识产品 (IP) 组合及强大的战略合作伙伴，拥有无可匹敌的实力，
-                        在系统级芯片 (SoC) 技术领域位居前列，其产品对于促进现在的聚合趋势
-                        发挥着重要作用。
-                    </textarea></td>
+                    <td>公司简介：</td>
+                    <td>
+                      <textarea name="profile" cols="100" rows="10">意法半导体（STMicroelectronics）是一家全球性的独立半导体公司，是微电子应用领域内开发及提供半导体解决方案的领导者。STMicroelectronics凭借硅片及系统技术的完美结合、雄厚的制造实力、全面的知识产品 (IP) 组合及强大的战略合作伙伴，拥有无可匹敌的实力，在系统级芯片 (SoC) 技术领域位居前列，其产品对于促进现在的聚合趋势发挥着重要作用。
+                      </textarea>
+                    </td>
                 </tr>
                 <tr>
-                    <td>国籍：<input type="text" value="法国"/></td>
+                    <td>国籍：</td>
+                    <td><input class="blank" type="text" value="法国"/></td>
                 </tr>
                 <tr>
-                    <td>网址：<input type="text" value="www.st.com"/></td>
+                    <td>网址：</td>
+                    <td><input class="blank" type="text" value="www.st.com"/></td>
                 </tr>
                 <tr>
-                    <td><input type="submit" value="修改"/></td>
+                    <td colspan="2"><input type="submit" value="修改"/></td>
                 </tr>
             </table>
         </form>
@@ -78,4 +83,10 @@
         </form>
     </div>
 </body>
+
+<style>
+    .blank{
+        width: 680px;
+    }
+</style>
 </html>
