--- a/src/main/webapp/WEB-INF/static/html/Xpn.html
+++ b/src/main/webapp/WEB-INF/static/html/Xpn.html
@@ -13,82 +13,113 @@
 <body>
     <div>
         <form action="toUpdatePn">
-            <table>
-                <tr><th>型号管理</th></tr>
+            <table id="pn" cellspacing="10px">
+                <tr><th colspan="2">型号管理</th></tr>
                 <tr>
-                    <td><input type="text" placeholder="输入型号"/>查询</td>
+                    <td colspan="2"><input id="fillPn" type="text" placeholder="输入型号"/><input id="pnSearch" type="submit" width="50px" value="查询"/></td>
                 </tr>
                 <tr>
-                    <td>型号编码：<input type="text" value="1002"/></td>
+                    <td>型号编码：</td>
+                    <td><input class="blank" type="text" value="1002"/></td>
                 </tr>
                 <tr>
-                    <td>型号分类:<select  id="ptypeList" >
-                        <option value="I集成电路" selected="selected">I 集成电路</option>
-                        <option value="T三极管">T 三极管</option>
-                        <option value="D二极管">D 二极管</option>
-                        <option value="C电容">C 电容</option>
-                    </select></td>
+                    <td>型号分类:</td>
+                    <td>
+                        <select  id="ptypeList" >
+                            <option value="I集成电路" selected="selected">I 集成电路</option>
+                            <option value="T三极管">T 三极管</option>
+                            <option value="D二极管">D 二极管</option>
+                            <option value="C电容">C 电容</option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
-                    <td>型号：<input type="text" value="STM8S003F3P6TR"/></td>
+                    <td>型号：</td>
+                    <td><input class="blank" type="text" value="STM8S003F3P6TR"/></td>
                 </tr>
                 <tr>
-                    <td>描述：<input type="text" value="MCU 8-Bit STM8S STM8 CISC 8KB Flash 3.3V/5V 20-Pin TSSOP Tube"/></td>
+                    <td>描述：</td>
+                    <td><input class="blank" type="text" value="MCU 8-Bit STM8S STM8 CISC 8KB Flash 3.3V/5V 20-Pin TSSOP Tube"/></td>
                 </tr>
                 <tr>
-                    <td>厂牌：<input type="text" value="ST"/></td>
+                    <td>厂牌：</td>
+                    <td><input class="blank" type="text" value="ST"/></td>
                 </tr>
                 <tr>
-                    <td>封装：<input type="text" value="TSSOP20"/></td>
+                    <td>封装：</td>
+                    <td><input class="blank" type="text" value="TSSOP20"/></td>
                 </tr>
                 <tr>
-                    <td>包装方式：<input type="text" value="ST"/></td>
+                    <td>包装方式：</td>
+                    <td><input class="blank" type="text" value="ST"/></td>
                 </tr>
                 <tr>
-                    <td>最小包装：<input type="text" value="2500"/></td>
+                    <td>最小包装：</td>
+                    <td><input class="blank" type="text" value="2500"/></td>
                 </tr>
                 <tr>
-                    <td>单价：<input type="text" value="1.10"/></td>
+                    <td>单价：</td>
+                    <td><input class="blank" type="text" value="1.10"/></td>
                 </tr>
                 <tr>
-                    <td>规格：<textarea name="spec" id="" cols="30" rows="10"></textarea> </td>
+                    <td>规格：</td>
+                    <td><textarea name="spec"  cols="100" rows="10"></textarea></td>
                 </tr>
                 <tr>
-                    <td>规格书链接：<a href="https://www.st.com/content/ccc/resource/technical/document/datasheet/42/5a/27/87/ac/5a/44/88/DM00024550.pdf/files/DM00024550.pdf/jcr:content/translations/en.DM00024550.pdf"></a></td>
+                    <td>规格书链接：</td>
+                    <td><textarea name="spec" cols="100" rows="5">href="https://www.st.com/content/ccc/resource/technical/document/datasheet/42/5a/27/87/ac/5a/44/88/DM00024550.pdf/files/DM00024550.pdf/jcr:content/translations/en.DM00024550.pdf"
+                    </textarea>
+                    </td>
                 </tr>
                 <tr>
-                    <td><input type="submit" value="修改"/></td>
+                    <td colspan="2"><input type="submit" value="修改"/></td>
                 </tr>
             </table>
         </form>
     </div>
     <div>
         <form action="downloadPn">
-            <tr><th>根据分类下载型号列表</th></tr>
-            <tr><td>
-                型号分类:<select  >
-                <option value="I集成电路" selected="selected">I 集成电路</option>
-                <option value="T三极管">T 三极管</option>
-                <option value="D二极管">D 二极管</option>
-                <option value="C电容">C 电容</option>
-            </select>
-            </td></tr>
-            <td><input type="submit" value="批量下载"/></td>
+            <table id="download" cellspacing="10px">
+                <tr><th>根据分类下载型号列表</th></tr>
+                <tr><td>
+                    型号分类:<select  >
+                    <option value="I集成电路" selected="selected">I 集成电路</option>
+                    <option value="T三极管">T 三极管</option>
+                    <option value="D二极管">D 二极管</option>
+                    <option value="C电容">C 电容</option>
+                </select>
+                </td></tr>
+                <td><input type="submit" value="批量下载"/></td>
+            </table>
         </form>
     </div>
     <div>
         <form action="uploadPn">
-            <tr><th>批量上传型号列表</th></tr>
-            <tr><td>
-                <input type="file"/>
-            </td></tr>
-            <tr>
-                <td><input type="radio" value="新增"/>新增<input type="radio" value="修改"/>修改</td>
-            </tr>
-            <tr>
-                <td><input type="submit" value="提交"/></td>
-            </tr>
+            <table id="upload" cellspacing="10px">
+                <tr><th>批量上传型号列表</th></tr>
+                <tr><td>
+                    <input type="file"/>
+                </td></tr>
+                <tr>
+                    <td><input type="radio" value="新增"/>新增<input type="radio" value="修改"/>修改</td>
+                </tr>
+                <tr>
+                    <td><input type="submit" value="提交"/></td>
+                </tr>
+            </table>
         </form>
     </div>
 </body>
+
+<style>
+    .blank{
+        width: 680px;
+    }
+    #fillPn{
+        width: 200px;
+    }
+    #pnSearch{
+        width: 50px;
+    }
+</style>
 </html>
