新增mfg rfq 修改页面addMfg  index

--- a/src/main/webapp/WEB-INF/static/html/addMfg.html
+++ b/src/main/webapp/WEB-INF/static/html/addMfg.html
@@ -12,6 +12,11 @@
 
 <body>
 <input type="hidden" id="AlertMessage" th:value="${AlertMessage}">
+<script>
+    if(document.getElementById("AlertMessage").value!=null){
+        alert(document.getElementById("AlertMessage").value)
+    }
+</script>
 <div id="header">
     <div id="head">
         <div id="logo">
