--- a/src/main/webapp/WEB-INF/static/html/findPrice.html
+++ b/src/main/webapp/WEB-INF/static/html/findPrice.html
@@ -243,6 +243,22 @@
     </div>
     </div>
 
+    <div id="pageCount_box">
+        <div id="pageCount1">
+            <button class="button">首页</button>
+            <span class="num">1</span>
+            <span class="num">2</span>
+            <span class="num">3</span>
+            <span class="num">4</span>
+            <span class="num">5</span>
+            <span class="num">6</span>
+            <span class="num">7</span>
+            <span class="num">8</span>
+            <span class="num">9</span>
+            <span class="num">10</span>
+            <button class="button">末页</button>
+        </div>
+    </div>
 
     <div class="box">
         <div id="hotStk">
@@ -251,6 +267,7 @@
                 <tr>
                     <th>公 司 名 称</th>
                     <th>规 格 型 号</th>
+                    <th>品牌</th>
                     <th>品质要求</th>
                     <th>批次</th>
                     <th>数量</th>
@@ -261,6 +278,7 @@
                 <tr>
                   <td>深圳市模板测试电子有限公司</td>
                   <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                   <td>原装正品</td>
                   <td>2018+</td>
                   <td>56850</td>
@@ -271,6 +289,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -281,6 +300,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -291,6 +311,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -301,6 +322,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -311,6 +333,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -321,6 +344,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -331,6 +355,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -341,6 +366,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -351,6 +377,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -361,6 +388,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -371,6 +399,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -381,6 +410,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -391,6 +421,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -401,6 +432,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -411,6 +443,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -421,6 +454,7 @@
                 <tr>
                     <td>深圳市模板测试电子有限公司</td>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
