--- a/src/main/webapp/WEB-INF/static/html/hotStk.html
+++ b/src/main/webapp/WEB-INF/static/html/hotStk.html
@@ -46,12 +46,14 @@
         <span class="upload">上传清单</span>
         <span class="upload">下载模板</span>
     </div>
+</div>
 <div class="box">
     <div id="hotStk">
         <table cellspacing="10px">
             <tr><th colspan="7" style="font-size: 20px">库存推广清单</th></tr>
             <tr>
                 <th>型号</th>
+                <th>品牌</th>
                 <th>品质标准</th>
                 <th>批次</th>
                 <th>数量</th>
@@ -61,6 +63,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -70,6 +73,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -79,6 +83,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -88,6 +93,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -97,6 +103,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -106,6 +113,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -115,6 +123,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -124,6 +133,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -133,6 +143,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -142,6 +153,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -151,6 +163,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -160,6 +173,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -169,6 +183,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -178,6 +193,7 @@
             </tr>
             <tr>
                 <td>STM8S903K3T6CTR</td>
+                <td>ST</td>
                 <td>原装正品</td>
                 <td>2018+</td>
                 <td>56850</td>
@@ -185,7 +201,6 @@
                 <td>深圳现货</td>
                 <td>2018-12-27</td>
             </tr>
-
         </table>
     </div>
 </div>
