--- a/src/main/webapp/WEB-INF/static/html/Xrfq.html
+++ b/src/main/webapp/WEB-INF/static/html/Xrfq.html
@@ -258,5 +258,21 @@
              </table>
         </form>
     </div>
+    <div id="pageCount_box">
+        <div id="pageCount">
+            <button class="button">首页</button>
+            <span class="num">1</span>
+            <span class="num">2</span>
+            <span class="num">3</span>
+            <span class="num">4</span>
+            <span class="num">5</span>
+            <span class="num">6</span>
+            <span class="num">7</span>
+            <span class="num">8</span>
+            <span class="num">9</span>
+            <span class="num">10</span>
+            <button class="button">末页</button>
+        </div>
+    </div>
 </body>
 </html>
