--- a/src/main/webapp/WEB-INF/static/html/company.html
+++ b/src/main/webapp/WEB-INF/static/html/company.html
@@ -92,6 +92,7 @@
                 <tr><th style="font-size: 24px">库存推广清单</th></tr>
                 <tr>
                     <th>型号</th>
+                    <th>品牌</th>
                     <th>品质标准</th>
                     <th>批次</th>
                     <th>数量</th>
@@ -101,6 +102,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -110,6 +112,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -119,6 +122,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -128,6 +132,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -137,6 +142,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -146,6 +152,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -155,6 +162,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -164,6 +172,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -173,6 +182,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -182,6 +192,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -191,6 +202,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -200,6 +212,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -209,6 +222,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -218,6 +232,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -227,6 +242,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -236,6 +252,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -245,6 +262,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -254,6 +272,7 @@
                 </tr>
                 <tr>
                     <td>STM8S903K3T6CTR</td>
+                    <td>Sample brand</td>
                     <td>原装正品</td>
                     <td>2018+</td>
                     <td>56850</td>
@@ -262,6 +281,23 @@
                     <td>2018-12-31</td>
                 </tr>
             </table>
+        </div>
+    </div>
+
+    <div id="pageCount_box">
+        <div id="pageCount">
+            <button class="button">首页</button>
+            <span class="num">1</span>
+            <span class="num">2</span>
+            <span class="num">3</span>
+            <span class="num">4</span>
+            <span class="num">5</span>
+            <span class="num">6</span>
+            <span class="num">7</span>
+            <span class="num">8</span>
+            <span class="num">9</span>
+            <span class="num">10</span>
+            <button class="button">末页</button>
         </div>
     </div>
 
