--- a/src/main/webapp/WEB-INF/static/html/addMfg.html
+++ b/src/main/webapp/WEB-INF/static/html/addMfg.html
@@ -46,8 +46,7 @@
         <form id="addForm" action="/addmfg" method="post" enctype="multipart/form-data" name="addForm">===============添加品牌===============
             <dl>
                 <dd>上传LOGO： <input  type="file"  name="upload" id="upload"/></dd>
-                <dd>英文名称：<input  name="ename" type="text" required/></dd>
-                <dd>中文名称：<input  name="cname" type="text" required/></dd>
+                <dd>品牌名称：<input  name="mfgName" type="text" required/></dd>
                 <dd>产品分类：<input  name="product" type="text" /></dd>
                 <dd>公司简介：<input  name="mprofile" type="text" /></dd>
                 <dd>公司国籍：<input  name="country" type="text" /></dd>
